syntax = "proto3";

option go_package = "gitlab.ozon.dev/Evgenion47/homework-2/api"; // <- search errors here

package api;

import "google/protobuf/empty.proto";

message SrcSlcByChat{
  repeated string sources = 1;
}

message ChSrcData{
  int64 chatID = 1;
  string source = 2;
}

message ChData{
  int64  chatID  = 1;
}

message RSSSlc{
  repeated string news = 1;
}

service awesomeBotIII{
  rpc CreateUser(ChData) returns (google.protobuf.Empty) {}
  rpc CreateSource(ChSrcData) returns (google.protobuf.Empty) {}
  rpc GetSrcsByChat(ChData) returns (SrcSlcByChat) {}
  rpc DeleteSource(ChSrcData) returns (google.protobuf.Empty) {}
  rpc GetRSSBySource(ChSrcData) returns (RSSSlc) {}
}